@@ -2,6 +2,7 @@ codebird-js - changelog
 =======================
 
 2.3.2 (not yet released)
++ Support multipart file uploads (non-proxy only for now)
 
 2.3.1 (2013-04-26)
 + Fix OAuth signature generation for POST requests with oauth_callback
